Fixed word wrap breaking

--- a/src/client/chat/Chat.less
+++ b/src/client/chat/Chat.less
@@ -18,12 +18,13 @@
             text-align: right;
             background-color: #abc5cf !important;
             margin: 0;
-            padding: 5px 10px 5px 12px;
+            padding: 5px 12px 5px 12px;
             width: 100%;
+            color: white;
         }
 
         .self {
-            overflow: hidden;
+            word-wrap: break-word;
             margin: 26px 20px;
             float: right;
             width: 65%;
@@ -32,6 +33,7 @@
         .log {
            float: left;
            clear: both;
+           letter-spacing: 0.5px;
         }
     }
     .log p {
